--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,10 @@
         android:id="@+id/crimeDetailFragment"
         android:name="com.bignerdranch.android.criminalintent.CrimeDetailFragment"
         android:label="CrimeDetailFragment"
-        tools:layout="@layout/fragment_crime_detail" />
+        tools:layout="@layout/fragment_crime_detail" >
+        <argument
+            android:name="crimeID"
+            app:argType="java.util.UUID" />
+    </fragment>
 
 </navigation>
