--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/crimeListFragment"
-        android:name="com.bignerdranch.android.criminalintent.CrimeListFragment"
+        android:name="com.bignerdranch.android.criminalintent.ui.CrimeListFragment"
         android:label="CrimeListFragment"
         tools:layout="@layout/fragment_crime_list">
         <action
@@ -16,12 +16,19 @@
     </fragment>
     <fragment
         android:id="@+id/crimeDetailFragment"
-        android:name="com.bignerdranch.android.criminalintent.CrimeDetailFragment"
+        android:name="com.bignerdranch.android.criminalintent.ui.CrimeDetailFragment"
         android:label="CrimeDetailFragment"
         tools:layout="@layout/fragment_crime_detail" >
         <argument
             android:name="crimeID"
             app:argType="java.util.UUID" />
+        <action
+            android:id="@+id/select_date"
+            app:destination="@id/datePickerFragment" />
     </fragment>
+    <dialog
+        android:id="@+id/datePickerFragment"
+        android:name="com.bignerdranch.android.criminalintent.ui.DatePickerFragment"
+        android:label="DatePickerFragment" />
 
 </navigation>
