--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.CriminalIntent" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
+    <style name="Base.Theme.CriminalIntent" parent="Theme.Material3.DayNight">
+        <!-- Customize your light theme here. .NoActionBar">-->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
