--- a/app/src/main/res/layout/fragment_crime_detail.xml
+++ b/app/src/main/res/layout/fragment_crime_detail.xml
@@ -28,8 +28,8 @@
             <ImageButton
                 android:id="@+id/crime_camera"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_camera"/>
+                android:layout_height="48dp"
+                android:src="@drawable/ic_camera" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
@@ -93,5 +93,59 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/crime_report_text" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="233dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:text="@string/latitude_title" />
+
+            <TextView
+                android:id="@+id/latitude"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceHeadline5"
+                android:text="@string/latitude_label" />
+
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:text="@string/longitude_title" />
+
+            <TextView
+                android:id="@+id/longitude"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceHeadline5"
+                android:text="@string/longitude_label" />
+
+
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/update_gps"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="Update GPS" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/show_map"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Show Map" />
 
 </LinearLayout>
